--- a/index.qmd
+++ b/index.qmd
@@ -16,11 +16,18 @@ about:
       url: "cv.pdf"
 comments: false
 ---
+::: {.column-page}
+I am a neurolinguist whose research lies at the intersection of acoustic phonetics, signal processing, and the neurobiology of auditory speech perception.
 
-## About
+Raised in the San Francisco Bay Area, I received a bachelor degree in linguistics from Boston University. This led to a 17-year career in the translation industry, first as a freelance translator and ultimately as an operational executive for an agency focused on life sciences translations. At this agency, I managed a team of project managers who supported medical device and biotechnology innovators in bringing new products to international markets. In 2021, I pivoted back to research, serving as the lab manager for an electrophysiology laboratory at Florida International University. I started my doctoral degree at the University of Texas at Austin in 2023.
 
-TBD
+Outside the lab, I love food, travel, and running (modestly) long distances.
 
 ## Research
+The intonation, rhythm, and timbre of speech can have dramatic effects on interindividual collaboration and negotiation. My research explores the perceptual power and cognitive costs of prosodic signals, particularly speech whose multi-faceted acoustics offer to the listener cues about the emotional state of the speaker. Which features does the listener use to intuit, in the flash of an eye, that their interlocutor is happy, bored, or irritated? How do these emotional tones of voice impact the cognitive and neural function of the listener? I investigate these questions using statistical modeling of human behavior, as well as machine learning models of the nonlinear dynamics of the electrical activity of the human brain (EEG).
 
-TBD
+My research seeks to broaden our understanding of the cognitive consequences of emotional communication with a view toward improving assistive hearing technologies, enhancing human-computer interactions, and creating healthier acoustic spaces for learning, work, and play.
+
+## News
+<span class="badge bg-success">2024-06-30</span> Launched this website!
+:::
