--- a/index.qmd
+++ b/index.qmd
@@ -24,8 +24,10 @@ Raised in the San Francisco Bay Area, I received a bachelor degree in linguistic
 
 Outside the lab, I love food, travel, and running (modestly) long distances.
 
+I also curate a list of [open datasets for neurolinguistics](https://jessb0t.github.io/neuroling-resources/).
+
 ## Research
-The intonation, rhythm, and timbre of speech can have dramatic effects on interindividual collaboration and negotiation. My research explores the perceptual power and cognitive costs of prosodic signals, particularly speech whose multi-faceted acoustics offer to the listener cues about the emotional state of the speaker. Which features does the listener use to intuit, in the flash of an eye, that their interlocutor is happy, bored, or irritated? How do these emotional tones of voice impact the cognitive and neural function of the listener? I investigate these questions using statistical modeling of human behavior, as well as machine learning models of the nonlinear dynamics of the electrical activity of the human brain (EEG).
+Natural human language is often conceptualized as serving a fundamental role of social communication, be this in transferring thoughts and ideas between individuals or groups, or in similarly establishing connections that forge friendships, cultures, and communities. Prosody–the intonation, rhythm, and timbre of speech–is vital to such social communication, manifesting meaningful effects on interindividual collaboration and negotiation. My research explores the perceptual power and cognitive costs of prosodic signals, particularly speech whose multi-faceted acoustics offer to the listener cues about the emotional state of the speaker. Which features does the listener use to intuit, in the flash of an eye, that their interlocutor is happy, bored, or irritated? How do these emotional tones of voice impact the cognitive and neural function of the listener? I investigate these questions using statistical modeling of human behavior, as well as computational models of the nonlinear dynamics of the electrical activity of the human brain (EEG).
 
 My research seeks to broaden our understanding of the cognitive consequences of emotional communication with a view toward improving assistive hearing technologies, enhancing human-computer interactions, and creating healthier acoustic spaces for learning, work, and play.
 
