--- a/index.qmd
+++ b/index.qmd
@@ -35,6 +35,6 @@ My research seeks to broaden our understanding of the cognitive consequences of 
 <span class="badge bg-success">2025-06-03</span> Our [paper](https://doi.org/10.1121/10.0036812) on emotional speech in noise is out in JASA!<br>
 <span class="badge bg-success">2025-02-13</span> Led a  [workshop](https://guides.lib.utexas.edu/data-and-donuts) on data visualization.<br>
 <span class="badge bg-success">2024-11-19</span> Presented a flashtalk at [ASA187](https://acousticalsociety.org/) on the benefits of happy and angry prosody for speech & emotion recognition.<br>
-<span class="badge bg-success">2024-10-15</span> Honored to be selected as an inaugural fellow of the UT Austin Scholars Lab.<br>
+<span class="badge bg-success">2024-10-15</span> Honored to be selected as an inaugural [fellow of the UT Austin Scholars Lab](https://lib.utexas.edu/visit-us/library-spaces/scholars-lab/scholars-lab-fellows/2025).<br>
 <span class="badge bg-success">2024-06-30</span> Launched this website!
 :::
