--- a/publications/index.qmd
+++ b/publications/index.qmd
@@ -8,7 +8,7 @@
 
 <h3>2024</h3>
 
-<p><strong>Alexander, J. M.</strong> and Buzzell, G. A. (2024). Emotional Context and Predictability in Naturalistic Reading Aloud. <i>Emotion</i>. \| <a href="https://doi.org/10.1037/emo0001298">\[DOI\]</a> \| <a href="https://doi.org/10.31234/osf.io/dh8vp">\[preprint\]</a> \| <a href="https://osf.io/pn2hu/">\[data+code\]</a> \| </p>
+<p><strong>Alexander, J. M.</strong> and Buzzell, G. A. (2024). Emotional Context and Predictability in Naturalistic Reading Aloud. <i>Emotion</i>. \| <a href="https://doi.org/10.1037/emo0001298">\[DOI\]</a> \| <a href="https://osf.io/pn2hu/">\[data+code\]</a> \|</p>
 
 </body>
 
